order/deployment/traefik/order.service.traefik-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-go-order
  namespace: cloud-native-go
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  selector:
    app: cloud-native-go-order

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-native-go-order
  namespace: cloud-native-go
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: order.cng.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-native-go-order
                port:
                  number: 80
